[kube-state-metrics] Add missing selectors
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -3705,6 +3705,7 @@ prometheus:
     ## Example which selects scrapeConfigs with label "prometheus" set to "somelabel"
     # scrapeConfigSelector:
     #   matchLabels:
+    #     release: ~
     #     prometheus: somelabel
 
     ## If nil, select own namespace. Namespaces to be selected for scrapeConfig discovery.
@@ -4521,6 +4522,7 @@ thanosRuler:
     ## Example which select all PrometheusRules resources
     ## with label "prometheus" with values any of "example-rules" or "example-rules-2"
     # ruleSelector:
+    #   matchLabels: ~
     #   matchExpressions:
     #     - key: prometheus
     #       operator: In
@@ -4531,6 +4533,7 @@ thanosRuler:
     ## Example which select all PrometheusRules resources with label "role" set to "example-rules"
     # ruleSelector:
     #   matchLabels:
+    #     release: ~
     #     role: example-rules
 
     ## Define Log Format
