--- a/charts/kube-prometheus-stack/templates/thanos-ruler/ruler.yaml
+++ b/charts/kube-prometheus-stack/templates/thanos-ruler/ruler.yaml
@@ -52,21 +52,11 @@ spec:
 {{- if .Values.thanosRuler.thanosRulerSpec.evaluationInterval }}
   evaluationInterval: {{ .Values.thanosRuler.thanosRulerSpec.evaluationInterval }}
 {{- end }}
-{{- if .Values.thanosRuler.thanosRulerSpec.ruleNamespaceSelector }}
-  ruleNamespaceSelector:
-{{ tpl (toYaml .Values.thanosRuler.thanosRulerSpec.ruleNamespaceSelector | indent 4) . }}
-{{ else }}
-  ruleNamespaceSelector: {}
+{{- if not (kindIs "invalid" .Values.thanosRuler.thanosRulerSpec.ruleNamespaceSelector) }}
+  ruleNamespaceSelector: {{ tpl (toYaml .Values.thanosRuler.thanosRulerSpec.ruleNamespaceSelector) . | nindent 4 }}
 {{- end }}
-{{- if .Values.thanosRuler.thanosRulerSpec.ruleSelector }}
-  ruleSelector:
-{{ tpl (toYaml .Values.thanosRuler.thanosRulerSpec.ruleSelector | indent 4) .}}
-{{- else if .Values.thanosRuler.thanosRulerSpec.ruleSelectorNilUsesHelmValues }}
-  ruleSelector:
-    matchLabels:
-      release: {{ $.Release.Name | quote }}
-{{ else }}
-  ruleSelector: {}
+{{- if not (kindIs "invalid" .Values.thanosRuler.thanosRulerSpec.ruleSelector) }}
+  ruleSelector: {{ tpl (toYaml .Values.thanosRuler.thanosRulerSpec.ruleSelector) . | nindent 4 }}
 {{- end }}
 {{- if .Values.thanosRuler.thanosRulerSpec.alertQueryUrl }}
   alertQueryUrl: "{{ .Values.thanosRuler.thanosRulerSpec.alertQueryUrl }}"
