--- a/charts/prometheus-blackbox-exporter/templates/configmap.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/configmap.yaml
@@ -1,5 +1,4 @@
-{{- if (eq .Values.configExistingConfigMapName: "") }}
-{{- if and .Values.config (eq .Values.configExistingSecretName "") }}
+{{- if and .Values.config (or (eq .Values.configExistingSecretName "") (eq .Values.configExistingConfigMapName: ""))}}
 apiVersion: v1
 kind: {{ if .Values.secretConfig -}} Secret {{- else -}} ConfigMap {{- end }}
 metadata:
