--- a/charts/prometheus-mongodb-exporter/values.yaml
+++ b/charts/prometheus-mongodb-exporter/values.yaml
@@ -93,6 +93,27 @@ serviceAccount:
 
 serviceMonitor:
   enabled: false
+  multiTarget:
+    enabled: false
+    username: ""
+    password:
+      existingSecret:
+        name: ""
+        key: ""
+      value: ""
+    targets: []
+    # Every target must have uri and name set
+    # - uri: "mongodb://mongodb-0.staging.internal:27017/admin"
+    #   name: "mongodb-0"
+    # - uri: "mongodb://mongodb-1.staging.internaltld:27017/admin"
+    #   name: "mongodb-1"
+    #   scrapeTimeout: 30s
+    #   interval: 60s
+    #   metricRelabelings:
+    #     - targetLabel: environment
+    #       replacement: staging
+    #       action: replace
+
   interval: 30s
   scrapeTimeout: 10s
   namespace:
