Include additionalMetricsRelabels in selfservicemonitor template
Signed-off-by: Sheikh-Abubaker <sheikhabubaker761@gmail.com>

--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -274,8 +274,8 @@ serviceMonitor:
   ## https://github.com/coreos/prometheus-operator for blackbox-exporter itself
   ##
   selfMonitor:
-    enabled: false
-    additionalMetricsRelabels: {}
+    enabled: true
+    additionalMetricsRelabels: []
     additionalRelabeling: []
     labels: {}
     path: /metrics
@@ -332,7 +332,7 @@ podMonitoring:
   ## https://cloud.google.com/stackdriver/docs/managed-prometheus/setup-managed#gmp-pod-monitoring for blackbox-exporter itself
   ##
   selfMonitor:
-    enabled: false
+    enabled: true
     additionalMetricsRelabels: {}
     labels: {}
     path: /metrics
@@ -429,7 +429,7 @@ verticalPodAutoscaler:
     updateMode: Auto
 
 configReloader:
-  enabled: false
+  enabled: true
   containerPort: 8080
   config:
     logFormat: logfmt
