--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/k8s.rules.container_cpu_limits.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/k8s.rules.container_cpu_limits.yaml
@@ -4,7 +4,7 @@ Do not change in-place! In order to change this file first read following link:
 https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack/hack
 */ -}}
 {{- $kubeTargetVersion := default .Capabilities.KubeVersion.GitVersion .Values.kubeTargetVersionOverride }}
-{{- if and (semverCompare ">=1.14.0-0" $kubeTargetVersion) (semverCompare "<9.9.9-9" $kubeTargetVersion) .Values.defaultRules.create }}
+{{- if and (semverCompare ">=1.14.0-0" $kubeTargetVersion) (semverCompare "<9.9.9-9" $kubeTargetVersion) .Values.defaultRules.create .Values.defaultRules.rules.k8sContainerCpuLimits }}
 {{- $kubeStateMetricsJob := include "kube-prometheus-stack-kube-state-metrics.name" . }}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
@@ -31,12 +31,12 @@ spec:
          (kube_pod_status_phase{phase=~"Pending|Running"} == 1)
          )
       record: cluster:namespace:pod_cpu:active:kube_pod_container_resource_limits
-      {{- if or .Values.defaultRules.additionalRuleLabels  }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.k8sContainerCpuLimits }}
       labels:
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
-        {{- with  }}
+        {{- with .Values.defaultRules.additionalRuleGroupLabels.k8sContainerCpuLimits }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
@@ -51,12 +51,12 @@ spec:
             )
         )
       record: namespace_cpu:kube_pod_container_resource_limits:sum
-      {{- if or .Values.defaultRules.additionalRuleLabels  }}
+      {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.k8sContainerCpuLimits }}
       labels:
         {{- with .Values.defaultRules.additionalRuleLabels }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
-        {{- with  }}
+        {{- with .Values.defaultRules.additionalRuleGroupLabels.k8sContainerCpuLimits }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
       {{- end }}
