added path to servicemonitor endpoint
Signed-off-by: Nijssen, J.W.A.M. (Jeroen) <Jeroen.Nijssen@devolksbank.nl>

--- a/charts/kube-state-metrics/templates/servicemonitor.yaml
+++ b/charts/kube-state-metrics/templates/servicemonitor.yaml
@@ -40,6 +40,8 @@ spec:
     {{- end }}
   endpoints:
     - port: http
+    {{- if or .Values.prometheus.monitor.http.path .Values.prometheus.monitor.path }}
+      path: {{ .Values.prometheus.monitor.http.path | default .Values.prometheus.monitor.path }}
     {{- if or .Values.prometheus.monitor.http.interval .Values.prometheus.monitor.interval }}
       interval: {{ .Values.prometheus.monitor.http.interval | default .Values.prometheus.monitor.interval }}
     {{- end }}
