--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -193,6 +193,7 @@ prometheus:
 
     ## kube-state-metrics endpoint
     http:
+      path: "/metrics"
       interval: ""
       scrapeTimeout: ""
       proxyUrl: ""
