[prometheus-stackdriver-exporter] fix deployment annotations (#4767)
* fix deployment annotations

Signed-off-by: Wojciech Smołkowski <wojciech.smolkowski@gmail.com>

* bump chart version

Signed-off-by: Wojciech Smołkowski <wojciech.smolkowski@gmail.com>

* Update charts/prometheus-stackdriver-exporter/templates/deployment.yaml

Signed-off-by: MH <zanhsieh@gmail.com>

Signed-off-by: MH <zanhsieh@gmail.com>

---------

Signed-off-by: Wojciech Smołkowski <wojciech.smolkowski@gmail.com>
Signed-off-by: MH <zanhsieh@gmail.com>
Co-authored-by: Rico Pahlisch <pahli88@googlemail.com>
Co-authored-by: MH <zanhsieh@gmail.com>

--- a/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
+++ b/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ template "stackdriver-exporter.fullname" . }}
   labels:
     {{- include "stackdriver-exporter.labels" . | indent 4 }}
+    {{- with .Values.annotations }}
+    annotations:
+      {{- toYaml .Values.annotations | indent 6 }}
+    {{- end }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
