[kube-prometheus-stack]: Apply tpl on prometheusSpec.additionalScrapeConfigsSecret
Signed-off-by: Viet Nguyen Duc <nguyenducviet4496@gmail.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -322,8 +322,8 @@ spec:
 {{- end }}
 {{- if .Values.prometheus.prometheusSpec.additionalScrapeConfigsSecret.enabled }}
   additionalScrapeConfigs:
-    name: {{ .Values.prometheus.prometheusSpec.additionalScrapeConfigsSecret.name }}
-    key: {{ .Values.prometheus.prometheusSpec.additionalScrapeConfigsSecret.key }}
+    name: {{ tpl .Values.prometheus.prometheusSpec.additionalScrapeConfigsSecret.name $ }}
+    key: {{ tpl .Values.prometheus.prometheusSpec.additionalScrapeConfigsSecret.key $ }}
 {{- end }}
 {{- if not .Values.prometheus.agentMode }}
 {{- if or .Values.prometheus.prometheusSpec.additionalAlertManagerConfigs .Values.prometheus.prometheusSpec.additionalAlertManagerConfigsSecret }}
