--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -237,6 +237,19 @@ serviceMonitor:
     # Metrics relabelings. Overrides value set in serviceMonitor.additionalMetricsRelabelConfigs
     #   additionalMetricsRelabelConfigs: []
 
+  ## If true, a ServiceMonitor CRD is created for snmp-exporter itself
+  ##
+  selfMonitor:
+    enabled: false
+    additionalMetricsRelabels: {}
+    additionalRelabeling: []
+    labels: {}
+    path: /metrics
+    scheme: http
+    tlsConfig: {}
+    interval: 30s
+    scrapeTimeout: 30s
+
 # Extra manifests to deploy as an array
 extraManifests: []
   # - |
