[kube-prometheus-stack] support kubelet endpoint slices (#4899)

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2698,6 +2698,11 @@ prometheusOperator:
     ## Use '{{ template "kube-prometheus-stack.fullname" . }}-kubelet' by default
     name: ""
 
+  ## Create Endpoints objects for kubelet targets.
+  kubeletEndpointsEnabled: true
+  ## Create EndpointSlice objects for kubelet targets.
+  kubeletEndpointSliceEnabled: false
+
   ## Create a servicemonitor for the operator
   ##
   serviceMonitor:
