[kube-prometheus-stack] Allow disabling the nodes-aix dashboard
Signed-off-by: Thomas Berreis <thomas@berreis.de>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2115,6 +2115,8 @@ nodeExporter:
   operatingSystems:
     linux:
       enabled: true
+    aix:
+      enabled: true
     darwin:
       enabled: true
 
