--- a/charts/prometheus-mongodb-exporter/values.yaml
+++ b/charts/prometheus-mongodb-exporter/values.yaml
@@ -28,12 +28,14 @@ livenessProbe:
     port: metrics
   initialDelaySeconds: 10
 
+# If the multi-target mode is enabled, this value will be ignored.
 # [mongodb[+srv]://][user:pass@]host1[:port1][,host2[:port2],...][/database][?options]
 mongodb:
   uri: "mongodb://mongodb:27017"
 
 # Name of an externally managed secret (in the same namespace) containing the connection uri as key `mongodb-uri`.
 # If this is provided, the value mongodb.uri is ignored.
+# If the multi-target mode is enabled, this value will be ignored.
 existingSecret:
   name: ""
   key: "mongodb-uri"
@@ -95,11 +97,12 @@ serviceMonitor:
   enabled: false
   multiTarget:
     enabled: false
+    # The username and password must be the same for every target configured below
     username: ""
     password:
       existingSecret:
         name: ""
-        key: ""
+        key: password
       value: ""
     targets: []
     # Every target must have uri and name set
