add tpl into ingress
Signed-off-by: Chris Jedro <cj@cloudeteer.de>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -377,7 +377,7 @@ server:
     ## Redirect ingress to an additional defined port on the service
     # servicePort: 8081
 
-    ## Prometheus server Ingress hostnames with optional path
+    ## Prometheus server Ingress hostnames with optional path (passed through tpl)
     ## Must be provided if Ingress is enabled
     ##
     hosts: []
@@ -389,14 +389,14 @@ server:
     # pathType is only for k8s >= 1.18
     pathType: Prefix
 
-    ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
+    ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services. (passed through tpl)
     extraPaths: []
     # - path: /*
     #   backend:
     #     serviceName: ssl-redirect
     #     servicePort: use-annotation
 
-    ## Prometheus server Ingress TLS configuration
+    ## Prometheus server Ingress TLS configuration (hosts passed through tpl)
     ## Secrets must be manually created in the namespace
     ##
     tls: []
