--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1464,6 +1464,11 @@ kubelet:
     additionalLabels: {}
     #  foo: bar
 
+    ## targetLabels for serviceMonitor
+    ## https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#servicemonitor
+    targetLabels: []
+    #  - cluster
+
 ## Component scraping the kube controller manager
 ##
 kubeControllerManager:
@@ -2700,6 +2705,8 @@ prometheusOperator:
     selector: ""
     ## Use '{{ template "kube-prometheus-stack.fullname" . }}-kubelet' by default
     name: ""
+    ## Pass targetLabels by creating labels to all kubelet resources using operator. Use format key=val
+    labels: "" 
 
   ## Create Endpoints objects for kubelet targets.
   kubeletEndpointsEnabled: true
