--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1464,7 +1464,7 @@ kubelet:
     additionalLabels: {}
     #  foo: bar
 
-    ## defines the labels which are transferred from the associated Kubernetes Pod object onto the ingested metrics.
+    ## defines the labels which are transferred from the associated Kubernetes Service object onto the ingested metrics.
     ## https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/api.md#servicemonitor
     targetLabels: []
     #  - cluster
