[kube-prometheus-stack] Implement Gateway API for AM/Thanos Ruler
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>

--- a/charts/kube-prometheus-stack/templates/thanos-ruler/route.yaml
+++ b/charts/kube-prometheus-stack/templates/thanos-ruler/route.yaml
@@ -1,7 +1,7 @@
-{{- if .Values.prometheus.enabled -}}
-  {{- $serviceName := printf "%s-%s" (include "kube-prometheus-stack.fullname" .) "prometheus" -}}
-  {{- $servicePort := .Values.prometheus.ingress.servicePort | default .Values.prometheus.service.port -}}
-  {{- range $name, $route := .Values.prometheus.route }}
+{{- if .Values.thanosRuler.enabled -}}
+  {{- $serviceName := include "kube-prometheus-stack.thanosRuler.name" . }}
+  {{- $servicePort := .Values.thanosRuler.service.port -}}
+  {{- range $name, $route := .Values.thanosRuler.route }}
     {{- if $route.enabled -}}
 ---
 apiVersion: {{ $route.apiVersion | default "gateway.networking.k8s.io/v1" }}
