--- a/charts/kube-prometheus-stack/templates/alertmanager/route.yaml
+++ b/charts/kube-prometheus-stack/templates/alertmanager/route.yaml
@@ -1,7 +1,7 @@
-{{- if .Values.prometheus.enabled -}}
-  {{- $serviceName := printf "%s-%s" (include "kube-prometheus-stack.fullname" .) "prometheus" -}}
-  {{- $servicePort := .Values.prometheus.ingress.servicePort | default .Values.prometheus.service.port -}}
-  {{- range $name, $route := .Values.prometheus.route }}
+{{- if .Values.alertmanager.enabled -}}
+  {{- $serviceName := printf "%s-%s" (include "kube-prometheus-stack.fullname" .) "alertmanager" }}
+  {{- $servicePort := .Values.alertmanager.ingress.servicePort | default .Values.alertmanager.service.port -}}
+  {{- range $name, $route := .Values.alertmanager.route }}
     {{- if $route.enabled -}}
 ---
 apiVersion: {{ $route.apiVersion | default "gateway.networking.k8s.io/v1" }}
@@ -12,9 +12,9 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   name: {{ $serviceName }}{{ if ne $name "main" }}-{{ $name }}{{ end }}
-  namespace: {{ template "kube-prometheus-stack.namespace" $ }}
+  namespace: {{ template "kube-alertmanager-stack.namespace" $ }}
   labels:
-    app: {{ template "kube-prometheus-stack.name" $ }}-prometheus
+    app: {{ template "kube-prometheus-stack.name" $ }}-alertmanager
     {{- include "kube-prometheus-stack.labels" $ | nindent 4 }}
     {{- with $route.labels }}
     {{- toYaml . | nindent 4 }}
