[kube-prometheus-stack] Add more informations to selector of additionalPodMonitors and additionalServiceMonitors (#4974)
* add more information to selector of additionalPodMonitors and additionalServiceMonitors

Signed-off-by: zhifanggao <28681649@qq.com>

* remove space

Signed-off-by: gaozf <gaozf@asiainfo.com>

---------

Signed-off-by: zhifanggao <28681649@qq.com>
Signed-off-by: gaozf <gaozf@asiainfo.com>
Co-authored-by: gaozf <gaozf@asiainfo.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -4301,6 +4301,18 @@ prometheus:
     ## Label selector for services to which this ServiceMonitor applies
     ##
     # selector: {}
+      ## Example which selects all services to be monitored
+      ## with label "monitoredby" with values any of "example-service-1" or "example-service-2"
+      # matchExpressions:
+      #   - key: "monitoredby"
+      #     operator: In
+      #     values:
+      #       - example-service-1
+      #       - example-service-2
+
+      ## label selector for services
+      ##
+      # matchLabels: {}
 
     ## Namespaces from which services are selected
     ##
@@ -4401,6 +4413,18 @@ prometheus:
     ## Label selector for pods to which this PodMonitor applies
     ##
     # selector: {}
+      ## Example which selects all Pods to be monitored
+      ## with label "monitoredby" with values any of "example-pod-1" or "example-pod-2"
+      # matchExpressions:
+      #   - key: "monitoredby"
+      #     operator: In
+      #     values:
+      #       - example-pod-1
+      #       - example-pod-2
+
+      ## label selector for pods
+      ##
+      # matchLabels: {}
 
     ## PodTargetLabels transfers labels on the Kubernetes Pod onto the target.
     ##
