Fix missing label for headless service selector
Signed-off-by: Bernd May <b.may@syseleven.de>

--- a/charts/alertmanager/templates/services.yaml
+++ b/charts/alertmanager/templates/services.yaml
@@ -50,6 +50,7 @@ metadata:
     {{- with .Values.service.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
+    type: headless
   namespace: {{ include "alertmanager.namespace" . }}
 spec:
   clusterIP: None
