--- a/charts/alertmanager/templates/servicemonitor.yaml
+++ b/charts/alertmanager/templates/servicemonitor.yaml
@@ -81,6 +81,7 @@ spec:
       {{- with .Values.service.labels }}
       {{- toYaml . | nindent 6 }}
       {{- end }}
+      type: headless
   {{- if .Values.serviceMonitor.targetLabels }}
   targetLabels: {{ toYaml .Values.serviceMonitor.targetLabels | nindent 4 }}
   {{- end }}
