[prometheus-postgres-exporter] Implement ability to define an existing secret for the configuration file
Signed-off-by: festeveira <f.esteveira@hotmail.com>

--- a/charts/prometheus-postgres-exporter/templates/deployment.yaml
+++ b/charts/prometheus-postgres-exporter/templates/deployment.yaml
@@ -159,7 +159,7 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           volumeMounts:
-            {{- if .Values.config.postgresExporter }}
+            {{- if or .Values.config.postgresExporter .Values.config.existingSecret.enabled }}
             - name: postgres-exporter
               mountPath: /etc/postgres_exporter.yml
               subPath: postgres_exporter.yml
@@ -195,7 +195,13 @@ spec:
           defaultMode: 420
           name: {{ template "prometheus-postgres-exporter.fullname" . }}
         name: postgres-exporter
-      {{- end }}
+      {{- else if .Values.config.existingSecret.enabled }}
+      - secret:
+          defaultMode: 420
+          secretName: {{ .Values.config.existingSecret.name }}
+        name: postgres-exporter
+      {{ end}}
+
       {{- with .Values.extraVolumes }}
       {{ toYaml . | nindent 6 }}
       {{- end }}
