--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -188,6 +188,12 @@ config:
     #       password: firstpass
     #     options:
     #       sslmode: disable
+  
+  # define an existing secret to be mounted as the config file
+  # needs to have the key 'postgres_exporter.yml'
+  existingSecret:
+    enabled: false
+    name: ""
 
 nodeSelector: {}
 
