--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -50,6 +50,22 @@ serviceMonitor:
   # TLS configuration to use when scraping the metric endpoint by Prometheus.
   # tlsConfig: {}
 
+   # Use multipleTarget mode
+  multipleTargets:
+    enabled: false
+    # Use the same auth module for every target
+    # The config file should have a section like [$name]
+    sharedAuthModule:
+      enabled: false
+      name: ""
+
+    # Define each target's endpoint and name
+    # When not using sharedAuthModule the config file should have one authModule for each target like [client.$name]
+    targets: []
+      # - endpoint:
+      #   name:
+      #   port: default 5432
+
 prometheusRule:
   enabled: false
   additionalLabels: {}
