Adds in a checksum to deploy for configmap
Signed-off-by: Byron Mansfield <byron@byronmansfield.com>

--- a/charts/prometheus/templates/deploy.yaml
+++ b/charts/prometheus/templates/deploy.yaml
@@ -23,10 +23,11 @@ spec:
 {{- end }}
   template:
     metadata:
-    {{- if .Values.server.podAnnotations }}
       annotations:
+      {{- if .Values.server.podAnnotations }}
         {{ toYaml .Values.server.podAnnotations | nindent 8 }}
-    {{- end }}
+      {{- end }}
+        checksum/config: {{ include (print $.Template.BasePath "/cm.yaml") . | sha256sum }}
       labels:
         {{- include "prometheus.server.labels" . | nindent 8 }}
         {{- if .Values.server.podLabels}}
