--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -111,7 +111,7 @@ spec:
         {{- end }}
         {{- if .Values.kubeRBACProxy.enabled }}
         - --telemetry-host=127.0.0.1
-        - --telemetry-port={{ $servicePort }}
+        - --telemetry-port={{ $telemetryPort }}
         {{- else }}
         {{- if .Values.selfMonitor.telemetryHost }}
         - --telemetry-host={{ .Values.selfMonitor.telemetryHost }}
