--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -257,7 +257,7 @@ spec:
         {{- .Values.kubeRBACProxy.extraArgs | toYaml | nindent 8 }}
         {{-  end  }}
         - --secure-listen-address=:{{ .Values.selfMonitor.telemetryPort | default 8081 }}
-        - --upstream=http://127.0.0.1:{{ $telemetryPort }}/
+        - --upstream=http://127.0.0.1:{{ $servicePort }}/
         - --proxy-endpoints-port=8889
         - --config-file=/etc/kube-rbac-proxy-config/config-file.yaml
         volumeMounts:
