Replace multipleTargets with multipleTarget
Signed-off-by: festeveira <f.esteveira@hotmail.com>

--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -51,7 +51,7 @@ serviceMonitor:
   # tlsConfig: {}
 
    # Use multipleTarget mode
-  multipleTargets:
+  multipleTarget:
     enabled: false
     # Use the same auth module for every target
     # The config file should have a section like [$name]
