--- a/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
@@ -12,9 +12,9 @@ metadata:
   namespace: {{ .Values.serviceMonitor.namespace }}
 {{- end }}
 spec:
-{{- if .Values.serviceMonitor.multipleTargets.enabled }}
+{{- if .Values.serviceMonitor.multipleTarget.enabled }}
   endpoints:
-  {{- range  .Values.serviceMonitor.multipleTargets.targets }}
+  {{- range  .Values.serviceMonitor.multipleTarget.targets }}
     - path: /probe
       port: {{ $.Values.service.name }}
   {{- if $.Values.serviceMonitor.interval }}
@@ -48,16 +48,16 @@ spec:
       params:
         target:
           - {{ .endpoint }}:{{ .port | default 5432 }}/postgres
-        {{- if $.Values.serviceMonitor.multipleTargets.sharedAuthModule.enabled }}
+        {{- if $.Values.serviceMonitor.multipleTarget.sharedAuthModule.enabled }}
         auth_module:
-          - {{ $.Values.serviceMonitor.multipleTargets.sharedAuthModule.name }}
+          - {{ $.Values.serviceMonitor.multipleTarget.sharedAuthModule.name }}
         {{- else }}
         auth_module:
           - client.{{ .name }}
         {{- end }}
   {{- end }}
 {{- end }}
-{{- if not .Values.serviceMonitor.multipleTargets.enabled -}}
+{{- if not .Values.serviceMonitor.multipleTarget.enabled -}}
   endpoints:
   - port: {{ .Values.service.name }}
 {{- if .Values.serviceMonitor.interval }}
