Improve values.yaml documentation
Signed-off-by: festeveira <f.esteveira@hotmail.com>

--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -60,10 +60,10 @@ serviceMonitor:
       name: ""
 
     # Define each target's endpoint and name
-    # When not using sharedAuthModule the config file should have one authModule for each target like [client.$name]
+    # When not using sharedAuthModule the config file should have one authModule for each target with key "client.$name"
     targets: []
-      # - endpoint:
-      #   name:
+      # - endpoint: pg01.local
+      #   name: pg01 (there needs to exist an authModule with key "client.pg01" if not using sharedAuthModule)
       #   port: default 5432
 
 prometheusRule:
