[prometheus-blackbox-exporter] Remove toYaml from extraManifests template
Signed-off-by: Andrew Titmuss <iandrewt@icloud.com>

--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -387,7 +387,8 @@ dnsConfig:
 
 # Extra manifests to deploy as an array
 extraManifests: []
-  # - apiVersion: v1
+  # - |
+  #   apiVersion: v1
   #   kind: ConfigMap
   #   metadata:
   #   labels:
