update kube-prometheus-stack chart

--- a/charts/kube-prometheus-stack/Chart.yaml
+++ b/charts/kube-prometheus-stack/Chart.yaml
@@ -1,62 +1,65 @@
-apiVersion: v2
-description: kube-prometheus-stack collects Kubernetes manifests, Grafana dashboards, and Prometheus rules combined with documentation and scripts to provide easy to operate end-to-end Kubernetes cluster monitoring with Prometheus using the Prometheus Operator.
-icon: https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png
-type: application
-maintainers:
-  - name: andrewgkew
-    email: andrew@quadcorps.co.uk
-  - name: gianrubio
-    email: gianrubio@gmail.com
-  - name: gkarthiks
-    email: github.gkarthiks@gmail.com
-  - name: GMartinez-Sisti
-    email: kube-prometheus-stack@sisti.pt
-  - name: jkroepke
-    email: github@jkroepke.de
-  - name: scottrigby
-    email: scott@r6by.com
-  - name: Xtigyro
-    email: miroslav.hadzhiev@gmail.com
-  - name: QuentinBisson
-    email: quentin.bisson@gmail.com
-name: kube-prometheus-stack
-sources:
-  - https://github.com/prometheus-community/helm-charts
-  - https://github.com/prometheus-operator/kube-prometheus
-version: 66.3.0
-appVersion: v0.78.2
-kubeVersion: ">=1.19.0-0"
-home: https://github.com/prometheus-operator/kube-prometheus
-keywords:
-  - operator
-  - prometheus
-  - kube-prometheus
 annotations:
-  "artifacthub.io/license": Apache-2.0
-  "artifacthub.io/operator": "true"
-  "artifacthub.io/links": |
+  artifacthub.io/license: Apache-2.0
+  artifacthub.io/links: |
     - name: Chart Source
       url: https://github.com/prometheus-community/helm-charts
     - name: Upstream Project
       url: https://github.com/prometheus-operator/kube-prometheus
-
+  artifacthub.io/operator: "true"
+apiVersion: v2
+appVersion: v0.78.1
 dependencies:
-  - name: crds
-    version: "0.0.0"
-    condition: crds.enabled
-  - name: kube-state-metrics
-    version: "5.27.*"
-    repository: https://prometheus-community.github.io/helm-charts
-    condition: kubeStateMetrics.enabled
-  - name: prometheus-node-exporter
-    version: "4.42.*"
-    repository: https://prometheus-community.github.io/helm-charts
-    condition: nodeExporter.enabled
-  - name: grafana
-    version: "8.6.*"
-    repository: https://grafana.github.io/helm-charts
-    condition: grafana.enabled
-  - name: prometheus-windows-exporter
-    repository: https://prometheus-community.github.io/helm-charts
-    version: "0.7.*"
-    condition: windowsMonitoring.enabled
+- condition: crds.enabled
+  name: crds
+  repository: ""
+  version: 0.0.0
+- condition: kubeStateMetrics.enabled
+  name: kube-state-metrics
+  repository: https://prometheus-community.github.io/helm-charts
+  version: 5.27.*
+- condition: nodeExporter.enabled
+  name: prometheus-node-exporter
+  repository: https://prometheus-community.github.io/helm-charts
+  version: 4.42.*
+- condition: grafana.enabled
+  name: grafana
+  repository: https://grafana.github.io/helm-charts
+  version: 8.5.*
+- condition: windowsMonitoring.enabled
+  name: prometheus-windows-exporter
+  repository: https://prometheus-community.github.io/helm-charts
+  version: 0.7.*
+description: kube-prometheus-stack collects Kubernetes manifests, Grafana dashboards,
+  and Prometheus rules combined with documentation and scripts to provide easy to
+  operate end-to-end Kubernetes cluster monitoring with Prometheus using the Prometheus
+  Operator.
+home: https://github.com/prometheus-operator/kube-prometheus
+icon: https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png
+keywords:
+- operator
+- prometheus
+- kube-prometheus
+kubeVersion: '>=1.19.0-0'
+maintainers:
+- email: andrew@quadcorps.co.uk
+  name: andrewgkew
+- email: gianrubio@gmail.com
+  name: gianrubio
+- email: github.gkarthiks@gmail.com
+  name: gkarthiks
+- email: kube-prometheus-stack@sisti.pt
+  name: GMartinez-Sisti
+- email: github@jkroepke.de
+  name: jkroepke
+- email: scott@r6by.com
+  name: scottrigby
+- email: miroslav.hadzhiev@gmail.com
+  name: Xtigyro
+- email: quentin.bisson@gmail.com
+  name: QuentinBisson
+name: kube-prometheus-stack
+sources:
+- https://github.com/prometheus-community/helm-charts
+- https://github.com/prometheus-operator/kube-prometheus
+type: application
+version: 66.1.0
