chore: comment attachMetadata configuration
Signed-off-by: liyang <ly18846162402@163.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2274,8 +2274,9 @@ prometheus-node-exporter:
 
       ## Attach node metadata to discovered targets. Requires Prometheus v2.35.0 and above.
       ##
-      attachMetadata:
-        node: false
+      # attachMetadata:
+      #   node: false
+
   rbac:
     ## If true, create PSPs for node-exporter
     ##
