Remove /postgres path from target param in ServiceMonitor
Signed-off-by: festeveira <f.esteveira@hotmail.com>

--- a/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
@@ -47,7 +47,7 @@ spec:
   {{- end }}
       params:
         target:
-          - {{ .endpoint }}:{{ .port | default 5432 }}/postgres
+          - {{ .endpoint }}:{{ .port | default 5432 }}
         {{- if $.Values.serviceMonitor.multipleTarget.sharedAuthModule.enabled }}
         auth_module:
           - {{ $.Values.serviceMonitor.multipleTarget.sharedAuthModule.name }}
